--- a/WhipperSnapper/app/build.gradle
+++ b/WhipperSnapper/app/build.gradle
@@ -28,6 +28,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('libs/bcprov-jdk15on-1.47.jar')
     compile files('libs/Parse-1.8.2.jar')
