--- a/WhipperSnapper/app/build.gradle
+++ b/WhipperSnapper/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile files('libs/Parse-1.8.2.jar')
     compile 'com.parse.bolts:bolts-android:1.+'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
+    compile 'com.google.android.gms:play-services:6.5.+'
 }
