--- a/WhipperSnapper/app/src/main/AndroidManifest.xml
+++ b/WhipperSnapper/app/src/main/AndroidManifest.xml
@@ -22,8 +22,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <!-- 79:7E:92:AC:69:20:96:D5:14:1E:45:7B:8E:13:05:59:63:56:6A:BE;com.al.whippersnapper -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
@@ -61,6 +62,10 @@
         <activity
             android:name=".activities.SeniorHomeActivity"
             android:label="@string/title_activity_senior_home" >
+        </activity>
+        <activity
+            android:name=".activities.WaitingForChatActivity"
+            android:label="@string/title_activity_waiting_for_chat" >
         </activity>
     </application>
 
