--- a/WhipperSnapper/app/build.gradle
+++ b/WhipperSnapper/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
     compile 'com.google.android.gms:play-services:6.5.+'
+    compile 'com.melnykov:floatingactionbutton:1.2.0'
 }
